Current branch contains version 2.1 and was moved to it's own branch, thus this branch code is outdated. Replacing with new 2.0.3 code based on work performed for a Germany company.